tests/parsing/smtlib/poly/errors/027_let_unopened_var_binding_list_2.psmt2
(set-logic ALL)
(assert (let foo true))
